# rinha-interpreter

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.bat  build.sh  clean.bat
.github/workflows/: benchmark.yml  ci.yml
benchmark/: fib.json  fib.py
docs/: rinha-ast.ebnf  rinha.ebnf
docs/rinha/: README.md
docs/rinha-ast/: README.md
examples/: ackermann.json  ackermann.rinha  anonymous_function.json  anonymous_function.rinha  arithmetic.json  arithmetic.rinha  branching.json  branching.rinha  closure.json  closure.rinha  combination.json  concatenation.json  concatenation.rinha  factorial.json  factorial.rinha  fib.json  fib.rinha  function.json  function.rinha  logical_and.json  logical_and.rinha  logical_or.json  logical_or.rinha  loop.json  loop.rinha  print.json  recursion.json  recursion.rinha  rinha_test.rinha  sum.json  sum.rinha  tail_call.json  tail_call.rinha  tail_fib.json  tail_fib.rinha  variable.json  variable.rinha
src/: array.c  array.h  callstack.c  callstack.h  chunk.c  chunk.h  closure.c  closure.h  common.h  compiler.c  compiler.h  dump.c  dump.h  function.c  function.h  hash.c  hash.h  main.c  memory.c  memory.h  result.c  result.h  scanner.c  scanner.h  stack.c  stack.h  str.c  str.h  tuple.c  tuple.h  value.c  value.h  vm.c  vm.h
